--- a/HarryPotter.htm
+++ b/HarryPotter.htm
@@ -19,6 +19,7 @@
 body { background-color: #000000;
        font-family: 'Public Sans';
        color: #00CED1;
+       width: 65%;
      }
 h1 { font-family: 'Princess Sofia';
      color: #6A5ACD;
