--- a/HarryPotter.htm
+++ b/HarryPotter.htm
@@ -19,7 +19,7 @@
 body { background-color: #000000;
        font-family: 'Public Sans';
        color: #00CED1;
-       margin: auto;
+       margin: 0 auto;
        width: 65%;
      }
 h1 { font-family: 'Princess Sofia';
