div-margin-auto

--- a/HarryPotter.htm
+++ b/HarryPotter.htm
@@ -19,9 +19,11 @@
 body { background-color: #000000;
        font-family: 'Public Sans';
        color: #00CED1;
-       margin: 0 auto;
-       width: 65%;
      }
+.top-div {
+       width: 65%;
+       margin: 0 auto;
+}
 h1 { font-family: 'Princess Sofia';
      color: #6A5ACD;
      text-align: center;
@@ -39,7 +41,7 @@ p, form, ul {
 
 </head>
 <body>
-
+<div class="top-div">
 <header>
 <h1><q>Harry Potter</q> Series</h1>
 </header>
@@ -159,7 +161,7 @@ Deathly Hallows Part 1 & 2
 <footer>
 <p><small>This is coded by Premchand</small></p>
 </footer>
-
+</div>
 </body>
 
 </html>
